--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "material-ui": "^0.19.2",
     "mongoose": "^4.4.20",
     "nodemailer": "^4.1.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.0",
